--- a/WebContent/css/mail.css
+++ b/WebContent/css/mail.css
@@ -1,304 +1,396 @@
 @charset "UTF-8";
+
 .content {
-    width: 100%;
+	width: 100%;
 }
+
 li {
-    list-style: none;
+	list-style: none;
 }
-a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, header, hgroup, html, i, iframe, img, input, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, select, small, span, strike, strong, sub, summary, sup, table, tbody, td, textarea, tfoot, th, thead, time, tr, tt, u, ul, var, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    vertical-align: baseline;
-    font-weight: 400;
-    color: #333;
-    font-family: 돋움,Dotum,Arial;
+
+a, abbr, acronym, address, applet, article, aside, audio, b, big,
+	blockquote, body, canvas, caption, center, cite, code, dd, del, details,
+	dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form,
+	header, hgroup, html, i, iframe, img, input, ins, kbd, label, legend,
+	li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp,
+	section, select, small, span, strike, strong, sub, summary, sup, table,
+	tbody, td, textarea, tfoot, th, thead, time, tr, tt, u, ul, var, video
+	{
+	margin: 0;
+	padding: 0;
+	border: 0;
+	vertical-align: baseline;
+	font-weight: 400;
+	color: #333;
+	font-family: 돋움, Dotum, Arial;
 }
+
 .content .main_area {
-    width: 980px;
-    margin: 0 auto;
-    overflow: hidden;
-    margin-top: 150px;
+	width: 980px;
+	margin: 0 auto;
+	overflow: hidden;
+	margin-top: 150px;
 }
+
 .left_main {
-    width: 270px;
-    height: 77vh;
-    border: 2px solid #ebebeb;
-    background-color: #fff;
-    margin: 20px 20px 0 0;
-    float: left;
-    position: relative;
+	width: 270px;
+	height: 77vh;
+	border: 2px solid #ebebeb;
+	background-color: #fff;
+	margin: 20px 20px 0 0;
+	float: left;
+	position: relative;
 }
+
 .left_main .left_main_header {
-    display: none;
+	display: none;
 }
+
 .left_main ul {
-    height: 77vh;
-    overflow-y: auto;
-    overflow-x: hidden;
+	height: 77vh;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
+
 .left_main .card_box, .left_main ul li {
-    position: relative;
+	position: relative;
 }
+
 .left_main ul li {
-    margin: 0 20px;
-    padding: 20px 0;
-    cursor: pointer;
-    background-color: #fff;
-    border-bottom: 1px solid #ebebeb;
-    height: 40px;
+	margin: 0 20px;
+	padding: 20px 0;
+	cursor: pointer;
+	background-color: #fff;
+	border-bottom: 1px solid #ebebeb;
+	height: 40px;
 }
+
 .left_main ul li .profile {
-    float: left;
+	float: left;
 }
+
 .left_main ul li .profile img {
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
-    border: 1px solid #ebebeb;
+	width: 36px;
+	height: 36px;
+	border-radius: 50%;
+	border: 1px solid #ebebeb;
 }
+
 .left_main ul li .info {
-    float: left;
-    margin-left: 10px;
-    position: relative;
-    width: 165px;
-    height: 40px;
+	float: left;
+	margin-left: 10px;
+	position: relative;
+	width: 165px;
+	height: 40px;
 }
+
 .left_main ul li .info .description, .left_main ul li .info .nick {
-    position: absolute;
-    left: 0;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+	position: absolute;
+	left: 0;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 .left_main ul li .info .nick {
-    top: 0;
-    font-size: 14px;
-    font-weight: 700;
-    color: #000;
-    width: 90px;
+	top: 0;
+	font-size: 14px;
+	font-weight: 700;
+	color: #000;
+	width: 90px;
 }
+
 .left_main ul li .info .description {
-    bottom: 0;
-    font-size: 13px;
-    color: #4e4e4c;
-    width: 123px;
+	bottom: 0;
+	font-size: 13px;
+	color: #4e4e4c;
+	width: 123px;
 }
+
 .left_main ul li .info .description, .left_main ul li .info .nick {
-    position: absolute;
-    left: 0;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+	position: absolute;
+	left: 0;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
+
 .left_main ul li .info .time_ago {
-    position: absolute;
-    top: 0;
-    right: 11px;
-    font-size: 11px;
-    color: #b4b4b4;
+	position: absolute;
+	top: 0;
+	right: 11px;
+	font-size: 11px;
+	color: #b4b4b4;
 }
+
 .left_main ul li:after {
-    display: block;
-    clear: both;
-    content: "";
+	display: block;
+	clear: both;
+	content: "";
 }
+
 .left_main .card_box, .left_main ul li {
-    position: relative;
+	position: relative;
 }
+
 a {
-    text-decoration: none;
+	text-decoration: none;
 }
+
 .left_main .card_box, .left_main ul li {
-    position: relative;
+	position: relative;
 }
+
 .left_main ul li {
-    margin: 0 20px;
-    padding: 20px 0;
-    cursor: pointer;
-    background-color: #fff;
-    border-bottom: 1px solid #ebebeb;
-    height: 80px;
+	margin: 0 20px;
+	padding: 20px 0;
+	cursor: pointer;
+	background-color: #fff;
+	border-bottom: 1px solid #ebebeb;
+	height: 80px;
 }
+
 .right_main {
-    width: 686px;
-    height: 77vh;
-    border: 2px solid #ebebeb;
-    background-color: #fff;
-    float: right;
-    margin: 20px 0 165px;
+	width: 686px;
+	height: 77vh;
+	border: 2px solid #ebebeb;
+	background-color: #fff;
+	float: right;
+	margin: 20px 0 165px;
 }
+
 .right_main .chat_header {
-    border-bottom: 1px solid #ebebeb;
-    padding: 15px 20px;
-    height: 80px;
+	border-bottom: 1px solid #ebebeb;
+	padding: 15px 20px;
+	height: 80px;
 }
+
 .right_main .chat_header .image_box {
-    float: left;
-    width: 50px;
-    height: 50px;
-    margin-right: 10px;
-    cursor: pointer;
+	float: left;
+	width: 50px;
+	height: 50px;
+	margin-right: 10px;
+	cursor: pointer;
 }
+
 .right_main .chat_header .image_box img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
 }
+
 .right_main .chat_header .info {
-    float: left;
-    display: table;
-    cursor: pointer;
+	float: left;
+	display: table;
+	cursor: pointer;
 }
+
 .right_main .chat_header .info div {
-    height: 50px;
-    display: table-cell;
-    vertical-align: middle;
+	height: 50px;
+	display: table-cell;
+	vertical-align: middle;
 }
+
 .right_main .chat_header .info span:first-child {
-    color: #000;
-    font-size: 16px;
-    font-weight: 700;
-    display: block;
+	color: #000;
+	font-size: 16px;
+	font-weight: 700;
+	display: block;
 }
+
 .right_main .chat_header .info span:nth-child(2) {
-    color: #4e4e4c;
-    font-size: 14px;
-    display: block;
-    margin-top: 4px;
+	color: #4e4e4c;
+	font-size: 14px;
+	display: block;
+	margin-top: 4px;
 }
+
 .right_main .chat_header .declaration {
-    float: right;
-    display: table;
+	float: right;
+	display: table;
 }
+
 .right_main .chat_header .declaration div {
-    height: 50px;
-    display: table-cell;
-    vertical-align: middle;
+	height: 50px;
+	display: table-cell;
+	vertical-align: middle;
 }
+
 .right_main .chat_header .declaration img {
-    width: 18px;
-    cursor: pointer;
+	width: 18px;
+	cursor: pointer;
 }
+
 .chat_close, .mobile_banner, .mobile_banner_image {
-    display: none;
+	display: none;
 }
+
 .right_main .chat_header:after {
-    display: block;
-    clear: both;
-    content: "";
+	display: block;
+	clear: both;
+	content: "";
 }
+
 .chat_description {
-    overflow: auto;
-    height: calc(77vh - 151px);
-    border-bottom: 1px solid #ebebeb;
+	overflow: auto;
+	height: calc(77vh - 151px);
+	border-bottom: 1px solid #ebebeb;
 }
+
 .chat_description .chat_timeago {
-    margin-top: 20px;
+	margin-top: 20px;
 }
+
 .chat_description .chat_timeago_box {
-    width: 106px;
-    height: 20px;
-    border-radius: 9.8px;
-    background-color: #f5f5f5;
-    text-align: center;
-    margin: 0 auto;
+	width: 106px;
+	height: 20px;
+	border-radius: 9.8px;
+	background-color: #f5f5f5;
+	text-align: center;
+	margin: 0 auto;
 }
+
 .chat_description .chat_timeago_box .chat_timeago_text {
-    font-size: 11px;
-    color: #687383;
+	font-size: 11px;
+	color: #687383;
 }
+
 .chat_description .chat_type2 {
-    overflow: hidden;
-    margin-top: 20px;
+	overflow: hidden;
+	margin-top: 20px;
 }
+
 .chat_description .chat_type2_image_box {
-    float: left;
-    margin: 0 18px 0 11px;
+	float: left;
+	margin: 0 18px 0 11px;
 }
+
 .chat_description .chat_type2_image_box .chat_type2_image {
-    width: 38px;
-    height: 38px;
-    border-radius: 50%;
+	width: 38px;
+	height: 38px;
+	border-radius: 50%;
 }
+
 .chat_description .chat_type2_message {
-    position: relative;
-    float: left;
-    text-align: left;
-    width: 222px;
-    background-color: #ebebeb;
-    border: 1px solid #ebebeb;
+	position: relative;
+	float: left;
+	text-align: left;
+	width: 222px;
+	background-color: #ebebeb;
+	border: 1px solid #ebebeb;
 }
+
 .chat_description .chat_type2_message_image {
-    width: 222px;
-    display: block;
+	width: 222px;
+	display: block;
 }
+
 .chat_description .chat_type2_message_main {
-    width: 222px;
-    background-color: #fff;
-    margin: 0 auto;
-    border-top: 1px solid #ebebeb;
+	width: 222px;
+	background-color: #fff;
+	margin: 0 auto;
+	border-top: 1px solid #ebebeb;
 }
+
 .chat_description .chat_type2_message_title {
-    width: 180px;
-    font-size: 14px;
-    padding: 10px 27px 10px 11px;
+	width: 180px;
+	font-size: 14px;
+	padding: 10px 27px 10px 11px;
 }
+
 .chat_description .chat_timeago {
-    margin-top: 20px;
+	margin-top: 20px;
 }
+
 .chat_description .chat_timeago_box {
-    width: 106px;
-    height: 20px;
-    border-radius: 9.8px;
-    background-color: #f5f5f5;
-    text-align: center;
-    margin: 0 auto;
+	width: 106px;
+	height: 20px;
+	border-radius: 9.8px;
+	background-color: #f5f5f5;
+	text-align: center;
+	margin: 0 auto;
 }
+
 .content .main_area:after {
-    display: block;
-    clear: both;
-    content: "";
+	display: block;
+	clear: both;
+	content: "";
 }
+
 .chat_footer {
-    height: 40px;
-    padding: 15px 15px 15px 21px;
+	height: 40px;
+	padding: 15px 15px 15px 21px;
 }
+
 .chat_footer .chat_input {
-    width: 568px;
-    overflow: auto;
-    height: 40px;
-    outline: 0;
-    line-height: 21px;
-    color: #000;
-    font-size: 15px;
-    float: left;
+	width: 568px;
+	overflow: auto;
+	height: 40px;
+	outline: 0;
+	line-height: 21px;
+	color: #000;
+	font-size: 15px;
+	float: left;
 }
+
 .chat_input[contenteditable=true] {
-    position: relative;
+	position: relative;
 }
+
 .chat_input[contenteditable=true]:empty:after {
-    content: attr(placeholder);
-    color: #b4b4b4;
-    cursor: text;
-    font-size: 15px;
-    display: block;
+	content: attr(placeholder);
+	color: #b4b4b4;
+	cursor: text;
+	font-size: 15px;
+	display: block;
 }
+
 .chat_footer button {
-    color: #fff;
-    background-color: #198754;
-    border-radius: 3px;
-    font-size: 15px;
-    font-weight: 700;
-    padding: 10px 0;
-    text-align: center;
-    width: 78px;
+	color: #fff;
+	background-color: #198754;
+	border-radius: 3px;
+	font-size: 15px;
+	font-weight: 700;
+	padding: 10px 0;
+	text-align: center;
+	width: 78px;
 }
+
 button {
-    border: none;
-    background: none;
-    cursor: pointer;
-    outline: 0;
-    padding: 0;
+	border: none;
+	background: none;
+	cursor: pointer;
+	outline: 0;
+	padding: 0;
+}
+
+.right_div {
+	margin-bottom: 1em;
+	text-align: right;
+	border-bottom: 1px solid #efefef;
+}
+
+.left_div {
+	margin-bottom: 1em;
+	border-bottom: 1px solid #efefef;
+}
+
+.mail_id_content {
+	margin-bottom: 1em;
+	font-size: 0.9em;
+}
+
+.mail_date_content {
+	font-size: -1.5em;
+	color: gray;
+}
+
+.size_limite {
+   overflow: hidden;
+   text-overflow: ellipsis;
+   height: 24px;
+   word-wrap: break-word;
+   display: -webkit-box;
+   -webkit-line-clamp: 1;
+   -webkit-box-orient: vertical;
 }
