--- a/WebContent/css/footer.css
+++ b/WebContent/css/footer.css
@@ -12,7 +12,36 @@
 .fotter-text {
 	color: white;
 }
-
 .madeby {
 	float: right;
+}
+
+h3 {
+	margin-bottom: 1em;
+}
+
+.usetext {
+	float: left;
+	margin: 0;
+}
+
+.usetext li {
+	float: left;
+	padding: 0px 20px 0 20px;
+	letter-spacing: 0px;
+	font-size: 0.9em;
+	line-height: 41px;
+	font-style: none;
+	list-style: none;
+}
+
+#use {
+	margin: 0px auto;
+	width: 100%;
+	height: 41px;
+}
+
+#use a {
+	text-decoration: none;
+	color: white;
 }
