--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -9,7 +9,7 @@
 }
 
 .home-main-section {
-	margin-top: 120px;
+	margin-top: 3em;
 	min-height: 100%;
 	padding: 106px 10em 10px 10em;
 }
@@ -50,6 +50,11 @@
 	margin-bottom: 5em;
 }
 
+@media screen and (max-width: 768px) {
+   .row h2 {
+      display: none;
+   }
+}
 /* .mypage-section {
 	margin-top: 140px;
 	min-height: 100%;
