--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -9,7 +9,7 @@
 }
 
 .home-main-section {
-	margin-top: 3em;
+	margin-top: 30px;
 	min-height: 100%;
 	padding: 106px 10em 10px 10em;
 }
@@ -17,30 +17,26 @@
 .col-12 {
 	margin-bottom: 3em;
 }
-
 .card {
-	border: none;
+    border:none;
 	margin-bottom: 2em;
 }
-
 .card-img-top {
 	height: 18em;
 	border: 1px solid transparent;
 	object-fit: contain;
 }
-
 .size_limite {
-	overflow: hidden;
-	text-overflow: ellipsis;
-	height: 24px;
-	word-wrap: break-word;
-	display: -webkit-box;
-	-webkit-line-clamp: 1;
-	-webkit-box-orient: vertical;
+   overflow: hidden;
+   text-overflow: ellipsis;
+   height: 24px;
+   word-wrap: break-word;
+   display: -webkit-box;
+   -webkit-line-clamp: 1;
+   -webkit-box-orient: vertical;
 }
 
 .getList {
-	color: #198754;
 	background-color: #fff;
 	border-color: #198754;
 	border: none;
@@ -49,85 +45,22 @@
 	padding-top: 0.4em;
 	margin-bottom: 5em;
 }
+.slick-track {
+    height: 100%;
+}
+#mainBanner {
+    display: block;
+    height: 500
+px
+;
+    position: relative;
+    border-bottom: 1
+px
+ solid #eee;
+}
 
 @media screen and (max-width: 768px) {
    .row h2 {
       display: none;
    }
 }
-/* .mypage-section {
-	margin-top: 140px;
-	min-height: 100%;
-	
-}
-.sidenav {
-	margin-top: 120px;
- 	height: 100%;
- 	width: 300px;
- 	position: fixed;
- 	z-index: 1;
- 	top: 0;
- 	left: 0;
-	background-color: #FAFAFA;;
-  	overflow-x: hidden;
-}
-
-
-
-.floatwrap {
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 350px;
-    height: auto;
-    margin: 0;
-    background: #fff;
-    border-left: 1px solid #fff;
-    z-index: 100;
-}
-.floatwrap .floatwing.fix {
-    float: none;
-    top: 0;
-    padding-top: 140px;
-    padding-left: 30px;
-    z-index: 6;
-    right: auto;
-    text-align: center;
-}
-.floatwrap .floatwing {
-    display: block;
-}
-.floatwrap .btn_toggle {
-    position: absolute;
-    left: -60px;
-    top: 299px;
-    width: 58px;
-    height: 58px;
-    cursor: pointer;
-    z-index: 1;
-}
-.floatwrap .btn_toggle > span > span {
-    display: block;
-    width: 100%;
-    height: 100%;
-    line-height: 58px;
-    text-align: center;
-    vertical-align: middle;
-    -webkit-transform: scale(1.0);
-    -moz-transform: scale(1.0);
-    -ms-transform: scale(1.0);
-    -o-transform: scale(1.0);
-    transform: scale(1.0);
-}
-.floatwrap .btn_toggle {
-    position: absolute;
-    left: -60px;
-    top: 299px;
-    width: 58px;
-    height: 58px;
-    cursor: pointer;
-    z-index: 1;
-}
-
- */
